subprojects/swen430/src/test/resources/tests/valid/DefiniteAssign_Valid_1.while
int foo(int y) {
    int x;
    switch (y) {
        default:
            x = 5;
    }

    return x;
}

void main() {
    print(foo(5));
}
