subprojects/swen430/src/test/resources/tests/invalid/DefiniteAssign_Invalid_22.while
int f(int x) {
    int y;
    if(x == 0) {
       y = 0;
       return y;
    }
    return y;
}